Horizontal scroll bug fix

--- a/client/src/app/dashboard/dashboard.component.scss
+++ b/client/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,6 @@
 .sub-container {
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto 1px auto;
   padding: 20px;
   background-color: #FFFAFA;
   
